--- a/HKUser/index.html
+++ b/HKUser/index.html
@@ -90,17 +90,13 @@
 				scrollList = doc.getElementById('scroll');
 			newNum = doc.getElementById("newInfoNum");
 			newContactNum = doc.getElementById("newContactNum");
-			var refreshCount = null,
-				loadCount = null;
 			var pdata = {},
 				div = null,
 				dl = null,
 				li = null;
 			var imgserver = null,
 				bannerList = null,
-				_pull = null,
-				count_01 = null,
-				count_02 = null;
+				_pull = null;
 
 			var bodyWidth = document.body.clientWidth;
 			_.plusReady(function() {
