--- a/HKUser/tabbar.html
+++ b/HKUser/tabbar.html
@@ -20,7 +20,7 @@
 				<span class="mui-icon iconfont icon-doctor"></span>
 				<span class="mui-tab-label">医生</span>
 			</a>
-			<a id="goInfo" class="mui-tab-item" href="communicate/communicate.html">
+			<a id="goInfo" class="mui-tab-item" href="communicate/communicate_circle.html">
 				<span class="mui-icon iconfont icon-contract"></span>
 				<span class="mui-tab-label">交流圈</span>
 			</a>
@@ -34,7 +34,7 @@
 		<script type="text/javascript" charset="utf-8">
 			 //mui初始化
 			mui.init();
-			var subpages = ['index.html', 'doctor/doctor_list.html', 'communicate/communicate.html', 'my_center/myD.html'];
+			var subpages = ['index.html', 'doctor/doctor_list.html', 'communicate/communicate_circle.html', 'my_center/myD.html'];
 			var subpage_style = {
 				top: '0',
 				bottom: '51px'
