--- a/HKUser/my_center/forgetPayPwd.html
+++ b/HKUser/my_center/forgetPayPwd.html
@@ -7,37 +7,7 @@
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="../css/common-form.css" />
 		<link rel="stylesheet" href="../css/input.css" />
-		<style>
-			.mui-input-group .mui-input-row:after{
-				left: 0;
-			}
-			.mui-scroll{width: 86%;margin: 0 7%;}
-			.mui-input-group{margin:30px 0 15px 0;}
-			.mui-input-group input,.mui-input-group .mui-input-row{height: 50px;padding: 0;}
-			.mui-input-group:before{
-				height: 0px;
-			}
-			.mui-btn.mui-btn-blue{
-			    position: absolute;
-			    top: 10px;
-			    right: 0;
-			    width: 85px;
-			    height: 30px;
-			    font-size: 12px;
-			    padding: 2px 0;
-			    border:0;border-radius: 6px;
-			}
-			.mui-btn-blue:enabled:active{
-				border:0;
-			}
-			.mui-icon.mui-icon-clear{
-				top: 14px !important;
-			}
-			.mui-row{
-				color: #999;
-				font-size: 14px;
-			}
-		</style>
+		<link rel="stylesheet" href="../css/center/forgetPayPwd.css" />
 	</head>
 	<body>
 		<header class="header mui-bar mui-bar-nav">
@@ -85,7 +55,7 @@
 					flag:1
 				};
 				u.mypost("api/sendIdentifyCode",pdata,true,function(data){
-					if(data.code.result == 0){
+					if(data.code.result == 0 && data.msg == '请求成功'){
 						_.toast("验证码已发送");
 						u.time(self);
 					}else{
