--- a/HKUser/my_center/help.html
+++ b/HKUser/my_center/help.html
@@ -10,29 +10,8 @@
 		<title>帮助</title>
 		<link rel="stylesheet" href="../css/mui.min.css" />
 		<link rel="stylesheet" href="../css/common.css" />
+		<link rel="stylesheet" href="../css/center/help.css" />
 	</head>
-	<style>
-		.mui-content > .mui-table-view:first-child {
-			margin-top: 0px;
-			font-size: 14px;
-		}
-		.help-question{
-			color: #33A2D7;
-			font-size: 15px;
-		}
-		.help-answer{
-			width: 100%;
-			padding-left: 25px;
-			font-size: 13px;
-			display: -webkit-box;
-		    overflow: hidden;
-		    white-space: normal !important;
-		    text-overflow: ellipsis;
-		    word-wrap: break-word;
-		    -webkit-line-clamp: 2;
-		    -webkit-box-orient: vertical;
-		}
-	</style>
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
