--- a/HKUser/my_center/modify_pwd.html
+++ b/HKUser/my_center/modify_pwd.html
@@ -7,57 +7,8 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link rel="stylesheet" href="../css/mui.min.css" />
 		<link rel="stylesheet" href="../css/common.css" />
-		<style>
-			.mui-content {
-				padding: 0 30px;
-				background: #fff;
-				margin-top: 20px;
-			}
-			
-			.pho-row {
-				border-bottom: 1px solid #DEDEDE;
-				height: 50px;
-				position: relative;
-			}
-			
-			.pho-row input {
-				border: none;
-				margin-top: 5px;
-				padding-left: 0;
-				font-size: 14px;
-				color: #333333;
-			}
-			
-			.pho-row button {
-				position: absolute;
-				right: 0;
-				top: 8px;
-				padding: 8px 10px;
-				font-size: 12px;
-				background: #33a2d7;
-				border: none;
-				color: #fff;
-			}
-			
-			.active {
-				background: #999;
-			}
-			
-			.save-btn {
-				width: 95%;
-				height: 33px;
-				margin: 0 auto;
-				border-radius: 20px;
-				line-height: 33px;
-				text-align: center;
-				background-color: #33A2D7;
-				color: #FFFFFF;
-				font-size: 16px;
-				margin: 20px 0;
-			}
-		</style>
+		<link rel="stylesheet" href="../css/center/modify_pwd.css" />
 	</head>
-
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-pull-left mui-action-back mui-icon mui-icon-left-nav"></a>
@@ -74,7 +25,7 @@
 				<div class="pho-row">
 					<input type="password" id="reNewPwd" placeholder="请再次输入新密码" />
 				</div>
-				<div class="save-btn" id="btnOk">确定</div>
+				<button class="save-btn" id="btnOk">确定</button>
 			</form>
 		</div>
 	</body>
