--- a/HKUser/doctor/doctor_detail.html
+++ b/HKUser/doctor/doctor_detail.html
@@ -38,11 +38,11 @@
 				<div id="homepage-list" class="homepage-list mui-control-content mui-active">
 					<ul class="mui-table-view">
 						<li class="mui-table-view-cell">
-							<div class="homepage-title">简介：</div>
+							<div class="homepage-title">简介</div>
 							<div class="mui-media-body homepage-content wrap-content" id="summary"></div>
 						</li>
 						<li class="mui-table-view-cell">
-							<div class="homepage-title">擅长：</div>
+							<div class="homepage-title">擅长</div>
 							<div class="mui-media-body homepage-content wrap-content" id="goodAt"></div>
 						</li>
 						<li class="mui-table-view-cell">
