--- a/HKUser/info/info_detail.html
+++ b/HKUser/info/info_detail.html
@@ -210,7 +210,7 @@
 					return;
 				}
 				var msg = {
-					title:title_share,//分享的标题
+					content:title_share,//分享的标题
 					href:href,
 					thumbs:thumbs,//缩略图
 					extra: {
