--- a/HKUser/message_list.html
+++ b/HKUser/message_list.html
@@ -54,8 +54,14 @@
 					}
 				});
 				u.mypost('user_center/msgList', pdata, false, function(data) {
-					localStorage.setItem("allNewsNum",data.data.count || 0);
-					getData(data.data);
+					if(data.code == 0){
+						localStorage.setItem("allNewsNum",data.data.count || 0);
+						getData(data.data);
+					}else if(data.code == 500 && '未登录' == data.msg){
+						u.goLogin();
+					}else{
+						_.toast(data.msg || '服务器异常');
+					}
 				},myerror);
 			})
 			function getData(data){
