--- a/HKUser/my_center/modify_payPwd.html
+++ b/HKUser/my_center/modify_payPwd.html
@@ -7,33 +7,7 @@
 		<link href="../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="../css/common-form.css" />
 		<link rel="stylesheet" href="../css/input.css" />
-		<style>
-			.mui-input-group .mui-input-row:after {
-				left: 0;
-			}
-			.mui-scroll {
-				width: 86%;
-				margin: 0 7%;
-			}
-			.mui-input-group {
-				margin: 30px 0 15px 0;
-			}
-			.mui-input-group input,
-			.mui-input-group .mui-input-row {
-				height: 50px;
-				padding: 0;
-			}
-			.mui-input-group:before {
-				height: 0;
-			}
-			.mui-icon.mui-icon-clear {
-				top: 14px !important;
-			}
-			.mui-row {
-				color: #999;
-				font-size: 14px;
-			}
-		</style>
+		<link rel="stylesheet" href="../css/center/modify_payPwd.css" />
 	</head>
 	<body>
 		<header class="header mui-bar mui-bar-nav">
